Fixed look of messages to be aligned with top bar
Added description for 'Add Smoke Detector'

Tweaked the form table CSS a little to make it look better

--- a/static/css/form_table.css
+++ b/static/css/form_table.css
@@ -2,6 +2,14 @@
     margin-top: 2em;
 }
 
+table {
+    border-collapse: collapse;
+}
+
+td {
+    padding-bottom: 0.5em;
+}
+
 th {
     padding-right: 1em;
     text-align: right;
